Fixed scroll issue on small devices revealing white background`

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
   background-repeat: no-repeat;
   background-position: center;
   overflow: hidden;
+  position: fixed;
 }
 
 .header {
@@ -31,12 +32,13 @@
   border-top: 0 solid transparent;
   border-right: 0 solid transparent;
   border-left: 0 solid transparent;
-  width: 102%;
-  height: 100vh;
+  width: 105%;
+  height: 100%;
   background: #0000004D;
 
   box-shadow: inset 0 0 5px 2px rgba(0, 25, 254, 0.4),
   inset 0 0 2px 2px rgba(31, 156, 246, 0.4),
   0 0 2px 2px rgba(31, 156, 246, 0.4),
   0 0 7px 2px rgba(0, 25, 254, 0.4);
+  overflow: hidden;
 }
